<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/padding"
    tools:context=".CartActivity">

    <TextView
        android:id="@+id/items_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/cart_title_color"
        android:textSize="14sp"
        android:text="@string/items_in_your_cart"
        />

    <otus.gpb.homework.viewandresources.CartItem
        android:id="@+id/cart_item_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:image="@drawable/cart_item_1"
        app:title="On the top"
        app:caption="Caption"
        app:price="$US,1.50"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/items_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <otus.gpb.homework.viewandresources.CartItem
        android:id="@+id/cart_item_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:image="@drawable/cart_item_2"
        app:title="Forever Friends"
        app:caption="Caption"
        app:price="$US,4.50"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/cart_item_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <otus.gpb.homework.viewandresources.CartItem
        android:id="@+id/cart_item_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:image="@drawable/cart_item_3"
        app:title="Prototyping Kit"
        app:caption="Caption"
        app:price="$US,8.00"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/cart_item_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <otus.gpb.homework.viewandresources.CartItem
        android:id="@+id/cart_item_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:image="@drawable/cart_item_4"
        app:title="Basket &amp; Cofee"
        app:caption="Caption"
        app:price="$US,22.00"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/cart_item_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/dashed_border"
        android:alpha="0.24"
        app:layout_constraintTop_toBottomOf="@id/cart_item_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/order_total"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:text="@string/your_order_total"
        android:textSize="20sp"
        android:textColor="@color/cart_total_color"
        android:layout_marginTop="24dp"
        android:layout_marginStart="@dimen/padding"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/order_total_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="41.24"
        android:textSize="20sp"
        android:textColor="@color/cart_total_color"
        android:layout_marginEnd="@dimen/padding"
        app:layout_constraintTop_toTopOf="@id/order_total"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/subtotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/subtotal"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/padding"
        app:layout_constraintTop_toBottomOf="@+id/order_total"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/subtotal_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="36.00"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:layout_marginEnd="@dimen/padding"
        app:layout_constraintTop_toTopOf="@id/subtotal"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/shipping"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/shipping"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:layout_marginStart="@dimen/padding"
        app:layout_constraintTop_toBottomOf="@+id/subtotal"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/shipping_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="2.00"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:layout_marginEnd="@dimen/padding"
        app:layout_constraintTop_toTopOf="@id/shipping"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tax"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:layout_marginStart="@dimen/padding"
        app:layout_constraintTop_toBottomOf="@+id/shipping"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tax_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="3.50"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:layout_marginEnd="@dimen/padding"
        app:layout_constraintTop_toTopOf="@id/tax"
        app:layout_constraintEnd_toEndOf="parent"
        />
    
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:id="@+id/pay"
        android:layout_width="154dp"
        android:layout_height="56dp"
        android:text="@string/pay_now"
        android:textSize="20sp"
        android:textColor="@color/round_button_text_color"
        android:drawableLeft="@drawable/wallet"
        android:backgroundTint="@color/round_button_bg_color"
        android:drawableTint="@color/button_icon_color"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>